--- a/src/assets/styles/base/_fontEN.scss
+++ b/src/assets/styles/base/_fontEN.scss
@@ -1,20 +1,9 @@
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen', 'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue', sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
-
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New', monospace;
-}
-
-/* //Fonts */
+//Fonts
 @font-face {
   font-family: 'PelazioFont';
   font-style: normal;
   font-weight: normal;
-  src: url('./assets/fonts/En/Yekan Bakh Fa-En 04 Regular.woff') format('woff');
+  src: url('../../fonts/En/Yekan Bakh Fa-En 04 Regular.woff') format('woff');
   /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
 }
 
@@ -22,7 +11,7 @@ code {
   font-family: 'PelazioFont';
   font-style: normal;
   font-weight: 500;
-  src: url('./assets/fonts/En/Yekan Bakh Fa-En 05 Medium.woff') format('woff');
+  src: url('../../fonts/En/Yekan Bakh Fa-En 05 Medium.woff') format('woff');
   /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
 }
 
@@ -30,7 +19,7 @@ code {
   font-family: 'PelazioFont';
   font-style: normal;
   font-weight: 600;
-  src: url('./assets/fonts/En/Yekan Bakh Fa-En 06 Bold.woff') format('woff');
+  src: url('../../fonts/En/Yekan Bakh Fa-En 06 Bold.woff') format('woff');
   /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
 }
 
@@ -38,7 +27,7 @@ code {
   font-family: 'PelazioFont';
   font-style: normal;
   font-weight: 900;
-  src: url('./assets/fonts/En/Yekan Bakh Fa-En 07 Heavy.woff') format('woff');
+  src: url('../../fonts/En/Yekan Bakh Fa-En 07 Heavy.woff') format('woff');
   /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
 }
 
@@ -46,7 +35,7 @@ code {
   font-family: 'PelazioFont';
   font-style: normal;
   font-weight: bold;
-  src: url('./assets/fonts/En/Yekan Bakh Fa-En 08 Fat.woff') format('woff');
+  src: url('../../fonts/En/Yekan Bakh Fa-En 08 Fat.woff') format('woff');
   /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
 }
 
@@ -55,7 +44,7 @@ code {
   font-family: 'PelazioFontNum';
   font-style: normal;
   font-weight: normal;
-  src: url('./assets/fonts/En/Yekan Bakh FaNum 04 Regular.woff') format('woff');
+  src: url('../../fonts/En/Yekan Bakh FaNum 04 Regular.woff') format('woff');
   /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
 }
 
@@ -63,7 +52,7 @@ code {
   font-family: 'PelazioFontNum';
   font-style: normal;
   font-weight: 500;
-  src: url('./assets/fonts/En/Yekan Bakh FaNum 05 Medium.woff') format('woff');
+  src: url('../../fonts/En/Yekan Bakh FaNum 05 Medium.woff') format('woff');
   /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
 }
 
@@ -71,7 +60,7 @@ code {
   font-family: 'PelazioFontNum';
   font-style: normal;
   font-weight: 600;
-  src: url('./assets/fonts/En/Yekan Bakh FaNum 06 Bold.woff') format('woff');
+  src: url('../../fonts/En/Yekan Bakh FaNum 06 Bold.woff') format('woff');
   /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
 }
 
@@ -79,7 +68,7 @@ code {
   font-family: 'PelazioFontNum';
   font-style: normal;
   font-weight: 900;
-  src: url('./assets/fonts/En/Yekan Bakh FaNum 07 Heavy.woff') format('woff');
+  src: url('../../fonts/En/Yekan Bakh FaNum 07 Heavy.woff') format('woff');
   /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
 }
 
@@ -87,6 +76,6 @@ code {
   font-family: 'PelazioFontNum';
   font-style: normal;
   font-weight: bold;
-  src: url('./assets/fonts/En/Yekan Bakh Fa-En 08 Fat.woff') format('woff');
+  src: url('../../fonts/En/Yekan Bakh Fa-En 08 Fat.woff') format('woff');
   /* FF3.6+, IE9, Chrome6+, Saf5.1+*/
 }
